# EuclidMachine

./: .gitignore  README.md  pyproject.toml
data/cdl/: test_imo_auto.json  test_imo_backward.json  test_imo_forward.json  test_imo_yuchang.json  test_incenter.json  test_parallel.json
data/gdl/: gdl-yuchang.json
src/em/constructor/: gc_generator.py  generation_config.json  jacobian_verifier.py  logging_config.json  main_gen.py  storage_handler.py  test_gen.py
src/em/formalgeo/: basic.py  configuration.py  construction.py  problem.py  solver.py  test.py  test_a.py  test_b.py  test_gdl.json  tests.py  tools.py
src/em/inductor/: mygdl.json  mygdl_analysis.md  parsed_gdl.json  test.py  tools.py
src/em/solver/: all_data_generator.py  auxiliary_construction_data.py  auxiliary_construction_data_full.py  check.py  check0109.py  generate_all_aux_data.py  generate_all_tp_leaf_data.py  generaterelation.py  json_to_excel.py  leaf_data_generator.py  model_trainer.py  neural_based_solver.py  solve_all_problems.py  solver_yyc.py  solver_yyc_last.py  symbolic_based_solver.py  symbolic_based_solver_violence.py
