[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "em"
version = "1.0.0"
authors = [
    { name = "Xiaokai Zhang", email = "xiaokaizhang1999@163.com" },
]
description = "This project is the official implementation of the paper 'Automatic Construction of Plane Geometry System without Human Supervision'."
readme = "README.md"
requires-python = ">=3.10.18"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "sympy==1.14.0",
    "matplotlib==3.10.6"
]
[project.urls]
"Homepage" = "https://github.com/BitSecret/EuclidMachine"
"Bug Tracker" = "https://github.com/BitSecret/EuclidMachine/issues"